# performabot

./: .gitignore  Benchmark.html  Default.html  Dockerfile-build  Dockerfile-client  Env.html  Environment.html  Github.html  GoParser.html  LICENSE  Lib.html  Log.html  Makefile  Model.html  Parser.html  ParserGo.html  ParserResult.html  Pretty.html  README.md  Result.html  default.nix  doc-index.html  floskell.json  image-performabot  image-server  index.html  nixpkgs.json  nixpkgs.nix  package.yaml  performabot.cabal  performabot.haddock  release.nix  shell.nix  stack.yaml
.circleci/: config.yml
app/: Main.hs
config/: bulma.scss  keter.yml  models  models.persistentmodels  routes  settings.yml  test-settings.yml
hack/: env.fish  env.sh  is-static  podman-config  policy.json  repl
nix/: default.nix  nixpkgs.json  overlay.nix  release-static.nix  release.nix  shell.nix  static.nix
src/: Benchmark.hs  Default.hs  Env.hs  Environment.hs  Foundation.hs  Github.hs  GoParser.hs  Import.hs  Lib.hs  Log.hs  Main.hs  Model.hs  Parser.hs  ParserGo.hs  ParserResult.hs  Pretty.hs  Result.hs  Server.hs  Settings.hs  devel.hs  model
src/Handler/: Api.hs  Client.hs  Common.hs  GitHub.hs  Home.hs
src/Import/: NoFoundation.hs
src/Settings/: StaticFiles.hs
src/cmd/: Main.hs
src/cmd/client/: Main.hs
src/cmd/devel/: GHCi.hs
src/cmd/server/: Main.hs
static/css/: bulma.min.css  uikit.min.css
templates/: home.hamlet  layout.hamlet  wrapper.hamlet
test/: BenchmarkSpec.hs  GoParserSpec.hs  Main.hs  ParserGoSpec.hs  ParserSpec.hs  PrettySpec.hs  ResultSpec.hs  Test.hs  TestImport.hs  sample
