cabal-version: 2.4
name: performabot
version: 0.1.0
license: BSD-3-Clause
license-file: LICENSE
author: Sascha Grunert
maintainer: mail@saschagrunert.de

executable performabot
  main-is: Main.hs
  build-depends:
    base < 5, heavy-logger, mtl, text-format-heavy
  hs-source-dirs: src
  default-language: Haskell2010
